[5.2] Move to https. [2]

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <hr />
       <div class="footer-link">
         <div><a href="http://www.forumeiros.com/criar-forum/phpbb3" target="_blank"><span>Criar um fórum</span></a></div>
-        <div><img src="http://i38.servimg.com/u/f38/18/21/41/30/free-h10.png" alt="Fórum grátis"></div>
+        <div><img src="https://i.imgur.com/RGPmnyq.png" alt="Fórum grátis"></div>
         <div><a href="http://www.forumeiros.com/" target="_blank"><span>© 2015, forumeiros.com</span></a></div>
       </div>
     </div>
