--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -66,7 +66,7 @@
       <img src="https://i.imgur.com/qNpIots.png" alt="" />
       <h1 style="color: #e6ad1d;">Form Generator</h1><span class="badge">2.0</span>
       <p>
-        The post forms serve to expedite the posting of topics that follow a certain pattern. Previously it was necessary to develop each form manually, however with this generator it is possible to produce a quality work without having to write a line of code.
+        The post forms serve to expedite the posting of topics that follow a certain pattern. Previously it was necessary to develop each form manually, however with this generator it is possible to produce a quality form without having to write a line of code.
         <br/><br/>
         To <strong>start</strong>, click in the <strong>plus icon</strong> on the right navigation bar. If you want to edit a field, click on the pencil icon, and if you want to delete a field, click on the minus icon.
       </p>
