Mudança do atributo href de alguns links.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Gerador de Formulários</title>
+  <title>Gerador de Formulários 2.0</title>
   <link rel="shortcut icon" type="image/x-icon" href="https://illiweb.com/fa/favicon/discussion.ico">
 
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400i,700,700i" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="https://lffg.github.io/fdf/css/form-styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -200,7 +200,7 @@
       <p>
         Agora que você já completou todos os paços do gerador, você pode instalar o seu <strong>novo</strong> formulário em seu fórum! Para isso, siga os passos que serão colocados à seguir.
         <br/> <br/>
-        Este gerador de formulários foi feito por <a href="/u47631">Luiz~</a>. Se você tem dúvidas, sugestões ou deseja comunicar um problema, contate o mesmo ou um <strong><span style="color: #EF3333;">Admin</span>eiro</strong> do Fórum dos Fóruns.
+        Este gerador de formulários foi feito por <a href="/u60563">Luiz~</a>. Se você tem dúvidas, sugestões ou deseja comunicar um problema, contate o mesmo ou um <strong><span style="color: #EF3333;">Admin</span>eiro</strong> do Fórum dos Fóruns.
       </p>
     </div>
     <div class="wrap">
@@ -266,7 +266,7 @@
         <div><a href="/t23-" target="_blank">Questões frequentes</a></div>
         <div><a href="/t6745-" target="_blank">Tutoriais, dicas e astúcias</a></div>
         <div>
-          <p>Gerador feito por <u><a href="/u47631" target="_blank">Luiz~</a></u>.</p>
+          <p>Gerador feito por <u><a href="/u60563" target="_blank">Luiz~</a></u>.</p>
         </div>
       </div>
 
@@ -283,7 +283,6 @@
   <!-- Javascript's -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
-  <script type="text/javascript" src="functions.js"></script>
-
+  <script type="text/javascript" src="https://lffg.github.io/fdf/js/form-functions.js"></script>
 </body>
 </html>
